# tcpcopy

./: Makefile.am  configure.ac
conf/: tcpcopy.conf
src/config/: tcpcopy.conf
src/core/: xcopy.h
src/tcpcopy/: Makefile.am  main.c  tc_config.c  tc_config.h  tc_manager.c  tc_packets_module.c  tc_packets_module.h  tc_session.c  tcpcopy.h
src/util/: tc_util.c  tc_util.h
